# zid_task

./: .gitignore  README.md  manage.py  openapi.schema.yaml  pyproject.toml  run.sh  views.py
Controller/: ShipmentController.py
Serializers/: ShipmentSerializer.py  UpdateShipmentSerializer.py
Services/CourierServices/: Aramex.py  CancellableCourier.py  Courier.py  CourierFactory.py  SMSA.py  ShipBox.py
Services/ShipmentServices/: ShipmentService.py
shipapp/: apps.py  models.py
shipapp/migrations/: 0001_initial.py
shipper/: asgi.py  settings.py  urls.py  wsgi.py
tests/: tests.py
zidship/: Courier.py
